# hugging-face-client

./: Cargo.toml  README.md  typos.toml
examples/: arxiv_daily.rs  arxiv_paper.rs  arxiv_repos.rs  create_collection.rs  create_collection_item.rs  create_repo.rs  delete_collection.rs  delete_collection_item.rs  delete_repo.rs  dlownload_parquet.rs  get_collection.rs  get_collections.rs  get_dataset.rs  get_dataset_tags.rs  get_datasets.rs  get_members.rs  get_metrics.rs  get_model.rs  get_model_tags.rs  get_models.rs  get_parquet.rs  get_space.rs  get_tags.rs  get_userinfo.rs  modify_collection.rs  modify_collection_item.rs  move_repo.rs  search_dataset.rs  search_datasets.rs  search_model.rs  search_models.rs  search_space.rs
src/: arxiv.rs  client.rs  collection.rs  dataset.rs  errors.rs  lib.rs  metric.rs  model.rs  paginamtion.rs  provider.rs  repo.rs  runtime.rs  sibling.rs  sort.rs  space.rs  tag.rs  user.rs
src/api/: arxiv_daily.rs  arxiv_paper.rs  arxiv_repos.rs  create_collection.rs  create_collection_item.rs  create_repo.rs  delete_collection.rs  delete_collection_item.rs  delete_repo.rs  download_parquet.rs  get_collection.rs  get_collections.rs  get_dataset.rs  get_dataset_tags.rs  get_datasets.rs  get_members.rs  get_metrics.rs  get_model.rs  get_model_tags.rs  get_models.rs  get_parquet.rs  get_space.rs  get_tags.rs  get_userinfo.rs  mod.rs  modify_collection.rs  modify_collection_item.rs  move_repo.rs  search_datasets.rs  search_models.rs  search_spaces.rs
src/client/: arxiv.rs  collection.rs  organization.rs  repo.rs  user.rs
