[package]
name = "hugging-face-client"
version = "0.1.0"
edition = "2024"
authors = ["dlzht@protonmail.com"]
license = "Apache-2.0"
description = "rust implment of Hugging Face Hub API"
repository = "https://github.com/dlzht/hugging-face-client"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["std"]}
serde_repr = "0.1.20"
snafu = "0.8.5"

[dev-dependencies]
serde_urlencoded = "0.7.1"
