[package]
name = "hugging-face-client"
version = "0.2.0"
edition = "2024"
authors = ["dlzht@protonmail.com"]
license = "Apache-2.0"
keywords = ["HuggingFace", "hf", "api"]
categories = ["web-programming", "asynchronous"]
description = "rust implment of Hugging Face Hub API"
repository = "https://github.com/dlzht/hugging-face-client"
exclude = ["examples", "typos.toml", "rustfmt.toml", ".gitignore", "README"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["std"]}
serde_repr = "0.1.20"
snafu = "0.8.5"

[dev-dependencies]
serde_urlencoded = "0.7.1"
tokio = { version = "1.44", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true